--- a/glade/generic_window.glade
+++ b/glade/generic_window.glade
@@ -445,6 +445,7 @@
                     <property name="primary_icon_sensitive">True</property>
                     <property name="secondary_icon_sensitive">True</property>
                     <property name="adjustment">0 0 2 0 0.10000000000000001 0</property>
+                    <property name="climb_rate">0.5</property>
                     <property name="digits">3</property>
                     <property name="snap_to_ticks">True</property>
                     <property name="numeric">True</property>
