--- a/glade/run_type_add.glade
+++ b/glade/run_type_add.glade
@@ -403,7 +403,7 @@ options</property>
                             <property name="secondary_icon_activatable">False</property>
                             <property name="primary_icon_sensitive">True</property>
                             <property name="secondary_icon_sensitive">True</property>
-                            <property name="adjustment">100 0 99999 1 10 0</property>
+                            <property name="adjustment">100 0 99999 0.10000000000000001 1 0</property>
                             <property name="climb_rate">1</property>
                             <property name="digits">2</property>
                             <property name="numeric">True</property>
@@ -425,17 +425,6 @@ options</property>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
                             <property name="position">1</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <widget class="GtkLabel" id="label_decimal">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                          </widget>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">False</property>
-                            <property name="position">2</property>
                           </packing>
                         </child>
                       </widget>
